--- a/OnlineVehicleMgmt/pom.xml
+++ b/OnlineVehicleMgmt/pom.xml
@@ -80,6 +80,13 @@
 			<version>1.1.3</version>
 		</dependency>
 		
+		<dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>servlet-api</artifactId>
+	<version>2.5</version>
+</dependency>
+		
+		
 	</dependencies>
 	<build>
 	<sourceDirectory>src</sourceDirectory>
